Filled in references for first few pargaraphs of Chenxiang's paper

--- a/references.bib
+++ b/references.bib
@@ -162,6 +162,23 @@
 	pages = {347--361}
 },
 
+@article{ke_multilayer_2009,
+	title = {Multilayer {DNA} origami packed on a square lattice},
+	volume = {131},
+	issn = {1520-5126},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19807088},
+	doi = {10.1021/ja906381y},
+	abstract = {Molecular self-assembly using {DNA} as a structural building block has proven to be an efficient route to the construction of nanoscale objects and arrays of increasing complexity. Using the remarkable "scaffolded {DNA} origami" strategy, Rothemund demonstrated that a long single-stranded {DNA} from a viral genome {(M13)} can be folded into a variety of custom two-dimensional {(2D)} shapes using hundreds of short synthetic {DNA} molecules as staple strands. More recently, we generalized a strategy to build custom-shaped, three-dimensional {(3D)} objects formed as pleated layers of helices constrained to a honeycomb lattice, with precisely controlled dimensions ranging from 10 to 100 nm. Here we describe a more compact design for {3D} origami, with layers of helices packed on a square lattice, that can be folded successfully into structures of designed dimensions in a one-step annealing process, despite the increased density of {DNA} helices. A square lattice provides a more natural framework for designing rectangular structures, the option for a more densely packed architecture, and the ability to create surfaces that are more flat than is possible with the honeycomb lattice. Thus enabling the design and construction of custom {3D} shapes from helices packed on a square lattice provides a general foundational advance for increasing the versatility and scope of {DNA} nanotechnology.},
+	number = {43},
+	journal = {Journal of the American Chemical Society},
+	author = {Ke, Yonggang and Douglas, Shawn M and Liu, Minghui and Sharma, Jaswinder and Cheng, Anchi and Leung, Albert and Liu, Yan and Shih, William M and Yan, Hao},
+	month = nov,
+	year = {2009},
+	note = {{PMID:} 19807088},
+	keywords = {{DNA}, Nucleic Acid Conformation},
+	pages = {15903--15908}
+},
+
 @article{white_structure_1976,
 	title = {The Structure of the Ventral Nerve Cord of Caenorhabditis elegans},
 	volume = {275},
@@ -239,6 +256,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {98--102}
 },
 
+@article{shih_knitting_2010,
+	title = {Knitting complex weaves with {DNA} origami},
+	volume = {20},
+	issn = {{1879-033X}},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20456942},
+	doi = {10.1016/j.sbi.2010.03.009},
+	abstract = {The past three decades have witnessed steady growth in our ability to harness {DNA} branched junctions as building blocks for programmable self-assembly of diverse supramolecular architectures. The {DNA-origami} method, which exploits the availability of long {DNA} sequences to template sophisticated nanostructures, has played a major role in extending this trend through the past few years. Today, two-dimensional and three-dimensional custom-shaped nanostructures comparable in mass to a small virus can be designed, assembled, and characterized with a prototyping cycle on the order of a couple of weeks.},
+	number = {3},
+	journal = {Current Opinion in Structural Biology},
+	author = {Shih, William M and Lin, Chenxiang},
+	month = jun,
+	year = {2010},
+	note = {{PMID:} 20456942},
+	keywords = {Base Sequence, {DNA}, Nanostructures, Nanotechnology},
+	pages = {276--282}
+},
+
 @article{hart_synaptic_1995,
 	title = {Synaptic code for sensory modalities revealed by C. elegans {GLR-1} glutamate receptor},
 	volume = {378},
@@ -284,6 +318,22 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {1263--1268}
 },
 
+@article{liu_crystalline_2011,
+	title = {Crystalline two-dimensional {DNA-origami} arrays},
+	volume = {50},
+	issn = {1521-3773},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21053236},
+	doi = {10.1002/anie.201005911},
+	number = {1},
+	journal = {Angewandte Chemie {(International} Ed. in English)},
+	author = {Liu, Wenyan and Zhong, Hong and Wang, Risheng and Seeman, Nadrian C},
+	month = jan,
+	year = {2011},
+	note = {{PMID:} 21053236},
+	keywords = {Crystallization, {DNA}, Microscopy, Electron, Scanning, Nanostructures, Nucleic Acid Conformation, Oligonucleotide Array Sequence Analysis},
+	pages = {264--267}
+},
+
 @article{szobota_remote_2007,
 	title = {Remote control of neuronal activity with a light-gated glutamate receptor},
 	volume = {54},
@@ -316,6 +366,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {32--46}
 },
 
+@article{bui_programmable_2010,
+	title = {Programmable periodicity of quantum dot arrays with {DNA} origami nanotubes},
+	volume = {10},
+	issn = {1530-6992},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20681601},
+	doi = {10.1021/nl101079u},
+	abstract = {To fabricate quantum dot arrays with programmable periodicity, functionalized {DNA} origami nanotubes were developed. Selected {DNA} staple strands were biotin-labeled to form periodic binding sites for streptavidin-conjugated quantum dots. Successful formation of arrays with periods of 43 and 71 nm demonstrates precise, programmable, large-scale nanoparticle patterning; however, limitations in array periodicity were also observed. Statistical analysis of {AFM} images revealed evidence for steric hindrance or site bridging that limited the minimum array periodicity.},
+	number = {9},
+	journal = {Nano Letters},
+	author = {Bui, Hieu and Onodera, Craig and Kidwell, Carson and Tan, {YerPeng} and Graugnard, Elton and Kuang, Wan and Lee, Jeunghoon and Knowlton, William B and Yurke, Bernard and Hughes, William L},
+	month = sep,
+	year = {2010},
+	note = {{PMID:} 20681601},
+	keywords = {{DNA}, Microscopy, Atomic Force, Nanotubes, Quantum Dots},
+	pages = {3367--3372}
+},
+
 @article{feng_imaging_2004,
 	title = {An imaging system for standardized quantitative analysis of C. elegans behavior},
 	volume = {5},
@@ -344,6 +411,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	url = {http://yongshin.blogspot.com/2005/11/how-to-use-cdt-and-mingw-for-eclipse.html},
 	keywords = {{OpenCV}, Programming},
 	howpublished = {http://yongshin.blogspot.com/2005/11/how-to-use-cdt-and-mingw-for-eclipse.html}
+},
+
+@article{rothemund_folding_2006,
+	title = {Folding {DNA} to create nanoscale shapes and patterns},
+	volume = {440},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/16541064},
+	doi = {10.1038/nature04586},
+	abstract = {{'Bottom-up} fabrication', which exploits the intrinsic properties of atoms and molecules to direct their self-organization, is widely used to make relatively simple nanostructures. A key goal for this approach is to create nanostructures of high complexity, matching that routinely achieved by 'top-down' methods. The self-assembly of {DNA} molecules provides an attractive route towards this goal. Here I describe a simple method for folding long, single-stranded {DNA} molecules into arbitrary two-dimensional shapes. The design for a desired shape is made by raster-filling the shape with a 7-kilobase single-stranded scaffold and by choosing over 200 short oligonucleotide 'staple strands' to hold the scaffold in place. Once synthesized and mixed, the staple and scaffold strands self-assemble in a single step. The resulting {DNA} structures are roughly 100 nm in diameter and approximate desired shapes such as squares, disks and five-pointed stars with a spatial resolution of 6 nm. Because each oligonucleotide can serve as a 6-nm pixel, the structures can be programmed to bear complex patterns such as words and images on their surfaces. Finally, individual {DNA} structures can be programmed to form larger assemblies, including extended periodic lattices and a hexamer of triangles (which constitutes a 30-megadalton molecular complex).},
+	number = {7082},
+	journal = {Nature},
+	author = {Rothemund, Paul W K},
+	month = mar,
+	year = {2006},
+	note = {{PMID:} 16541064},
+	keywords = {Art, Bacteriophage M13, Biopolymers, {DNA}, {DNA}, {Single-Stranded}, {DNA}, Viral, Microscopy, Atomic Force, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {297--302}
 },
 
 @misc{_mechanotransduction_????,
@@ -383,6 +467,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {e13914}
 },
 
+@article{jungmann_single-molecule_2010,
+	title = {Single-molecule kinetics and super-resolution microscopy by fluorescence imaging of transient binding on {DNA} origami},
+	volume = {10},
+	issn = {1530-6992},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20957983},
+	doi = {10.1021/nl103427w},
+	abstract = {{DNA} origami is a powerful method for the programmable assembly of nanoscale molecular structures. For applications of these structures as functional biomaterials, the study of reaction kinetics and dynamic processes in real time and with high spatial resolution becomes increasingly important. We present a single-molecule assay for the study of binding and unbinding kinetics on {DNA} origami. We find that the kinetics of hybridization to single-stranded extensions on {DNA} origami is similar to isolated substrate-immobilized {DNA} with a slight position dependence on the origami. On the basis of the knowledge of the kinetics, we exploit reversible specific binding of labeled oligonucleotides to {DNA} nanostructures for {PAINT} (points accumulation for imaging in nanoscale topography) imaging with {\textless}30 nm resolution. The method is demonstrated for flat monomeric {DNA} structures as well as multimeric, ribbon-like {DNA} structures.},
+	number = {11},
+	journal = {Nano Letters},
+	author = {Jungmann, Ralf and Steinhauer, Christian and Scheible, Max and Kuzyk, Anton and Tinnefeld, Philip and Simmel, Friedrich C},
+	month = nov,
+	year = {2010},
+	note = {{PMID:} 20957983},
+	keywords = {Binding Sites, {DNA}, Image Enhancement, Kinetics, Microscopy, Fluorescence, Molecular Probe Techniques},
+	pages = {4756--4761}
+},
+
 @misc{_mcintire_????,
 	title = {{McIntire} Lab - Steve {McIntire}, {M.D.}, {Ph.D.}},
 	url = {http://www.galloresearch.org/index.php/investigators/mcintirelab}
@@ -417,6 +518,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	author = {{WormBase}},
 	month = may,
 	year = {2009}
+},
+
+@article{han_dna_2011,
+	title = {{DNA} origami with complex curvatures in three-dimensional space},
+	volume = {332},
+	issn = {1095-9203},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21493857},
+	doi = {10.1126/science.1202998},
+	abstract = {We present a strategy to design and construct self-assembling {DNA} nanostructures that define intricate curved surfaces in three-dimensional {(3D)} space using the {DNA} origami folding technique. Double-helical {DNA} is bent to follow the rounded contours of the target object, and potential strand crossovers are subsequently identified. Concentric rings of {DNA} are used to generate in-plane curvature, constrained to {2D} by rationally designed geometries and crossover networks. Out-of-plane curvature is introduced by adjusting the particular position and pattern of crossovers between adjacent {DNA} double helices, whose conformation often deviates from the natural, B-form twist density. A series of {DNA} nanostructures with high curvature--such as {2D} arrangements of concentric rings and {3D} spherical shells, ellipsoidal shells, and a nanoflask--were assembled.},
+	number = {6027},
+	journal = {Science {(New} York, {N.Y.)}},
+	author = {Han, Dongran and Pal, Suchetan and Nangreave, Jeanette and Deng, Zhengtao and Liu, Yan and Yan, Hao},
+	month = apr,
+	year = {2011},
+	note = {{PMID:} 21493857},
+	keywords = {{DNA}, Models, Molecular, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {342--346}
 },
 
 @article{chen_wiring_2006,
@@ -1057,6 +1175,23 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {9557--9569}
 },
 
+@article{han_folding_2010,
+	title = {Folding and cutting {DNA} into reconfigurable topological nanostructures},
+	volume = {5},
+	issn = {1748-3395},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20890274},
+	doi = {10.1038/nnano.2010.193},
+	abstract = {Topology is the mathematical study of the spatial properties that are preserved through the deformation, twisting and stretching of objects. Topological architectures are common in nature and can be seen, for example, in {DNA} molecules that condense and relax during cellular events. Synthetic topological nanostructures, such as catenanes and rotaxanes, have been engineered using supramolecular chemistry, but the fabrication of complex and reconfigurable structures remains challenging. Here, we show that {DNA} origami can be used to assemble a Möbius strip, a topological ribbon-like structure that has only one side. In addition, we show that the {DNA} Möbius strip can be reconfigured through strand displacement to create topological objects such as supercoiled ring and catenane structures. This {DNA} fold-and-cut strategy, analogous to Japanese kirigami, may be used to create and reconfigure programmable topological structures that are unprecedented in molecular engineering.},
+	number = {10},
+	journal = {Nature Nanotechnology},
+	author = {Han, Dongran and Pal, Suchetan and Liu, Yan and Yan, Hao},
+	month = oct,
+	year = {2010},
+	note = {{PMID:} 20890274},
+	keywords = {{DNA}, Models, Molecular, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {712--717}
+},
+
 @article{coates_antagonistic_2002,
 	title = {Antagonistic pathways in neurons exposed to body fluid regulate social feeding in Caenorhabditis elegans},
 	volume = {419},
@@ -1329,6 +1464,21 @@ are driven and organized by proprioceptive coupling},
 	note = {{PMID:} 11861469},
 	keywords = {Animals, Axons, Bacterial Proteins, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Cell Polarity, Drosophila Proteins, Gene Expression, Helminth Proteins, Homeodomain Proteins, Motor Neurons, Muscle Proteins, Mutagenesis, Nuclear Proteins, Protozoan Proteins, Transcription Factors},
 	pages = {853--862}
+},
+
+@article{steinhauer_dna_2009,
+	title = {{DNA} origami as a nanoscopic ruler for super-resolution microscopy},
+	volume = {48},
+	issn = {1521-3773},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19830751},
+	doi = {10.1002/anie.200903308},
+	number = {47},
+	journal = {Angewandte Chemie {(International} Ed. in English)},
+	author = {Steinhauer, Christian and Jungmann, Ralf and Sobey, Thomas L and Simmel, Friedrich C and Tinnefeld, Philip},
+	year = {2009},
+	note = {{PMID:} 19830751},
+	keywords = {Biotin, {DNA}, Fluorescence Resonance Energy Transfer, Fluorescent Dyes, Microscopy, Fluorescence, Nanostructures},
+	pages = {8870--8873}
 },
 
 @article{friesen_neuronal_1978,
@@ -1900,6 +2050,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {383--396}
 },
 
+@article{andersen_self-assembly_2009,
+	title = {Self-assembly of a nanoscale {DNA} box with a controllable lid},
+	volume = {459},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19424153},
+	doi = {10.1038/nature07971},
+	abstract = {The unique structural motifs and self-recognition properties of {DNA} can be exploited to generate self-assembling {DNA} nanostructures of specific shapes using a 'bottom-up' approach. Several assembly strategies have been developed for building complex three-dimensional {(3D)} {DNA} nanostructures. Recently, the {DNA} 'origami' method was used to build two-dimensional addressable {DNA} structures of arbitrary shape that can be used as platforms to arrange nanomaterials with high precision and specificity. A long-term goal of this field has been to construct fully addressable {3D} {DNA} nanostructures. Here we extend the {DNA} origami method into three dimensions by creating an addressable {DNA} box 42 x 36 x 36 nm(3) in size that can be opened in the presence of externally supplied {DNA} 'keys'. We thoroughly characterize the structure of this {DNA} box using cryogenic transmission electron microscopy, small-angle X-ray scattering and atomic force microscopy, and use fluorescence resonance energy transfer to optically monitor the opening of the lid. Controlled access to the interior compartment of this {DNA} nanocontainer could yield several interesting applications, for example as a logic sensor for multiple-sequence signals or for the controlled release of nanocargos.},
+	number = {7243},
+	journal = {Nature},
+	author = {Andersen, Ebbe S and Dong, Mingdong and Nielsen, Morten M and Jahn, Kasper and Subramani, Ramesh and Mamdouh, Wael and Golas, Monika M and Sander, Bjoern and Stark, Holger and Oliveira, Cristiano L P and Pedersen, Jan Skov and Birkedal, Victoria and Besenbacher, Flemming and Gothelf, Kurt V and Kjems, Jørgen},
+	month = may,
+	year = {2009},
+	note = {{PMID:} 19424153},
+	keywords = {Cryoelectron Microscopy, {DNA}, Imaging, {Three-Dimensional}, Microscopy, Atomic Force, Nanostructures, Nucleic Acid Conformation},
+	pages = {73--76}
+},
+
 @incollection{bargmann_chemotaxis_1998,
 	edition = {1},
 	series = {Cold Spring Harbor Monograph Series},
@@ -1914,6 +2081,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = jan,
 	year = {1998},
 	keywords = {Chemotaxis, {PQE}  - definite citation, thermosensing}
+},
+
+@article{dietz_folding_2009,
+	title = {Folding {DNA} into twisted and curved nanoscale shapes},
+	volume = {325},
+	issn = {1095-9203},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19661424},
+	doi = {10.1126/science.1174251},
+	abstract = {We demonstrate the ability to engineer complex shapes that twist and curve at the nanoscale from {DNA.} Through programmable self-assembly, strands of {DNA} are directed to form a custom-shaped bundle of tightly cross-linked double helices, arrayed in parallel to their helical axes. Targeted insertions and deletions of base pairs cause the {DNA} bundles to develop twist of either handedness or to curve. The degree of curvature could be quantitatively controlled, and a radius of curvature as tight as 6 nanometers was achieved. We also combined multiple curved elements to build several different types of intricate nanostructures, such as a wireframe beach ball or square-toothed gears.},
+	number = {5941},
+	journal = {Science {(New} York, {N.Y.)}},
+	author = {Dietz, Hendrik and Douglas, Shawn M and Shih, William M},
+	month = aug,
+	year = {2009},
+	note = {{PMID:} 19661424},
+	keywords = {Base Pairing, {DNA}, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {725--730}
 },
 
 @article{richmond_unc-13_1999,
@@ -1948,6 +2132,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 18993077},
 	keywords = {Alleles, Amino Acid Substitution, Animals, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Environment, Feeding Behavior, Polymorphism, Genetic, Receptors, Neuropeptide Y, Selection {(Genetics)}},
 	pages = {1694--1699}
+},
+
+@article{woo_programmable_2011,
+	title = {Programmable molecular recognition based on the geometry of {DNA} nanostructures},
+	volume = {3},
+	issn = {1755-4349},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21778982},
+	doi = {10.1038/nchem.1070},
+	abstract = {From ligand-receptor binding to {DNA} hybridization, molecular recognition plays a central role in biology. Over the past several decades, chemists have successfully reproduced the exquisite specificity of biomolecular interactions. However, engineering multiple specific interactions in synthetic systems remains difficult. {DNA} retains its position as the best medium with which to create orthogonal, isoenergetic interactions, based on the complementarity of {Watson-Crick} binding. Here we show that {DNA} can be used to create diverse bonds using an entirely different principle: the geometric arrangement of blunt-end stacking interactions. We show that both binary codes and shape complementarity can serve as a basis for such stacking bonds, and explore their specificity, thermodynamics and binding rules. Orthogonal stacking bonds were used to connect five distinct {DNA} origami. This work, which demonstrates how a single attractive interaction can be developed to create diverse bonds, may guide strategies for molecular recognition in systems beyond {DNA} nanostructures.},
+	number = {8},
+	journal = {Nature Chemistry},
+	author = {Woo, Sungwook and Rothemund, Paul W K},
+	month = aug,
+	year = {2011},
+	note = {{PMID:} 21778982},
+	keywords = {{DNA}, Isomerism, Nanostructures, Nucleic Acid Hybridization, Thermodynamics},
+	pages = {620--627}
 },
 
 @article{huang_automated_2008,
@@ -2062,6 +2263,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 18806786},
 	keywords = {Acetylcholine, Alanine, Animals, Animals, Genetically Modified, Behavior, Animal, Caenorhabditis elegans, Caenorhabditis elegans Proteins, egl-6, Female, {FMRFamide}, Gene Expression Regulation, Green Fluorescent Proteins, Membrane Potentials, Membrane Transport Modulators, Motor Neurons, Mutation, Neural Inhibition, {Patch-Clamp} Techniques, Peptides, Receptors, {G-Protein-Coupled}, Reproduction, Signal Transduction, Threonine},
 	pages = {1168--1176}
+},
+
+@article{lund_molecular_2010,
+	title = {Molecular robots guided by prescriptive landscapes},
+	volume = {465},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20463735},
+	doi = {10.1038/nature09012},
+	abstract = {Traditional robots rely for their function on computing, to store internal representations of their goals and environment and to coordinate sensing and any actuation of components required in response. Moving robotics to the single-molecule level is possible in principle, but requires facing the limited ability of individual molecules to store complex information and programs. One strategy to overcome this problem is to use systems that can obtain complex behaviour from the interaction of simple robots with their environment. A first step in this direction was the development of {DNA} walkers, which have developed from being non-autonomous to being capable of directed but brief motion on one-dimensional tracks. Here we demonstrate that previously developed random walkers-so-called molecular spiders that comprise a streptavidin molecule as an inert 'body' and three deoxyribozymes as catalytic 'legs'-show elementary robotic behaviour when interacting with a precisely defined environment. Single-molecule microscopy observations confirm that such walkers achieve directional movement by sensing and modifying tracks of substrate molecules laid out on a two-dimensional {DNA} origami landscape. When using appropriately designed {DNA} origami, the molecular spiders autonomously carry out sequences of actions such as 'start', 'follow', 'turn' and 'stop'. We anticipate that this strategy will result in more complex robotic behaviour at the molecular level if additional control mechanisms are incorporated. One example might be interactions between multiple molecular robots leading to collective behaviour; another might be the ability to read and transform secondary cues on the {DNA} origami landscape as a means of implementing Turing-universal algorithmic behaviour.},
+	number = {7295},
+	journal = {Nature},
+	author = {Lund, Kyle and Manzo, Anthony J and Dabby, Nadine and Michelotti, Nicole and {Johnson-Buck}, Alexander and Nangreave, Jeanette and Taylor, Steven and Pei, Renjun and Stojanovic, Milan N and Walter, Nils G and Winfree, Erik and Yan, Hao},
+	month = may,
+	year = {2010},
+	note = {{PMID:} 20463735},
+	keywords = {Algorithms, Computers, Molecular, {DNA}, Catalytic, {DNA}, {Single-Stranded}, Microscopy, Atomic Force, Microscopy, Fluorescence, Movement, Nanotechnology, Robotics, Streptavidin, Surface Plasmon Resonance, Time Factors, Zinc},
+	pages = {206--210}
 },
 
 @article{xiao_direct_2009,
@@ -2570,6 +2788,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 16492464},
 	keywords = {Animals, Caenorhabditis elegans, Cell Differentiation, Locomotion, Models, Neurological, Movement, Nerve Net, Neural Pathways, Neurons, Review},
 	pages = {125--167}
+},
+
+@article{lin_designer_2009,
+	title = {Designer {DNA} nanoarchitectures},
+	volume = {48},
+	issn = {1520-4995},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19199428},
+	doi = {10.1021/bi802324w},
+	abstract = {Naturally existing biological systems, from the simplest unicellular diatom to the most sophisticated organ such as the human brain, are functional self-assembled architectures. Scientists have long been dreaming about building artificial nanostructures that can mimic such elegance in nature. Structural {DNA} nanotechnology, which uses {DNA} as a blueprint and building material to organize matter with nanometer precision, represents an appealing solution to this challenge. On the basis of the knowledge of helical {DNA} structure and {Watson-Crick} base pairing rules, scientists have constructed a number of {DNA} nanoarchitectures with a large variety of geometries, topologies, and periodicities with considerably high yields. Modified by functional groups, those {DNA} nanostructures can serve as scaffolds to control the positioning of other molecular species, which opens opportunities to study intermolecular synergies, such as protein-protein interactions, as well as to build artificial multicomponent nanomachines. In this review, we summarize the principle of {DNA} self-assembly, describe the exciting progress of structural {DNA} nanotechnology in recent years, and discuss the current frontier.},
+	number = {8},
+	journal = {Biochemistry},
+	author = {Lin, Chenxiang and Liu, Yan and Yan, Hao},
+	month = mar,
+	year = {2009},
+	note = {{PMID:} 19199428},
+	keywords = {{DNA}, Nanostructures, Nanotechnology, Nucleic Acid Conformation, Reproducibility of Results},
+	pages = {1663--1674}
 },
 
 @article{hart_distinct_1999,
@@ -3088,6 +3323,40 @@ These results show that the microstructure can be used as a behavioral screen fo
 	keywords = {Caenorhabditis elegans, {DLP}}
 },
 
+@article{pal_dna-origami-directed_2010,
+	title = {{DNA-origami-directed} self-assembly of discrete silver-nanoparticle architectures},
+	volume = {49},
+	issn = {1521-3773},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20235262},
+	doi = {10.1002/anie.201000330},
+	number = {15},
+	journal = {Angewandte Chemie {(International} Ed. in English)},
+	author = {Pal, Suchetan and Deng, Zhengtao and Ding, Baoquan and Yan, Hao and Liu, Yan},
+	month = apr,
+	year = {2010},
+	note = {{PMID:} 20235262},
+	keywords = {{DNA}, Gold, Metal Nanoparticles, Organometallic Compounds, Silver},
+	pages = {2700--2704}
+},
+
+@article{nangreave_dna_2010,
+	title = {{DNA} origami: a history and current perspective},
+	volume = {14},
+	issn = {1879-0402},
+	shorttitle = {{DNA} origami},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20643573},
+	doi = {10.1016/j.cbpa.2010.06.182},
+	abstract = {Researchers have been using {DNA} for the rational design and construction of nanoscale objects for nearly 30 years. Recently, 'scaffolded {DNA} origami' has emerged as one of the most promising assembly techniques in {DNA} nanotechnology with a broad range of applications. In the past two years alone, {DNA} origami has been used to assemble water-soluble probe tiles for label-free {RNA} hybridization, to study single-molecule chemical reactions, to probe distance-dependent multivalent ligand-protein binding effects, and to organize a variety of relevant molecules including proteins, carbon nanotubes, and metal nanoparticles. This review will recount the origin, evolution, and current status of this extremely versatile assembly technique.},
+	number = {5},
+	journal = {Current Opinion in Chemical Biology},
+	author = {Nangreave, Jeanette and Han, Dongran and Liu, Yan and Yan, Hao},
+	month = oct,
+	year = {2010},
+	note = {{PMID:} 20643573},
+	keywords = {{DNA}, Nanotechnology, Nucleic Acid Conformation},
+	pages = {608--615}
+},
+
 @article{diamond_where_2008,
 	title = {{'Where'} and 'what' in the whisker sensorimotor system},
 	volume = {9},
@@ -3109,6 +3378,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {Concerned About {BPA:} Check Your Receipts - Science News},
 	url = {http://www.sciencenews.org/view/generic/id/48084/title/Science_%2B_the_Public__Concerned_about_BPA_Check_your_receipts},
 	howpublished = {{http://www.sciencenews.org/view/generic/id/48084/title/Science\_\%2B\_the\_Public\_\_Concerned\_about\_BPA\_Check\_your\_receipts}}
+},
+
+@article{liedl_self-assembly_2010,
+	title = {Self-assembly of three-dimensional prestressed tensegrity structures from {DNA}},
+	volume = {5},
+	issn = {1748-3395},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/20562873},
+	doi = {10.1038/nnano.2010.107},
+	abstract = {Tensegrity, or tensional integrity, is a property of a structure indicating a reliance on a balance between components that are either in pure compression or pure tension for stability. Tensegrity structures exhibit extremely high strength-to-weight ratios and great resilience, and are therefore widely used in engineering, robotics and architecture. Here, we report nanoscale, prestressed, three-dimensional tensegrity structures in which rigid bundles of {DNA} double helices resist compressive forces exerted by segments of single-stranded {DNA} that act as tension-bearing cables. Our {DNA} tensegrity structures can self-assemble against forces up to 14 {pN}, which is twice the stall force of powerful molecular motors such as kinesin or myosin. The forces generated by this molecular prestressing mechanism can be used to bend the {DNA} bundles or to actuate the entire structure through enzymatic cleavage at specific sites. In addition to being building blocks for nanostructures, tensile structural elements made of single-stranded {DNA} could be used to study molecular forces, cellular mechanotransduction and other fundamental biological processes.},
+	number = {7},
+	journal = {Nature Nanotechnology},
+	author = {Liedl, Tim and Högberg, Björn and Tytell, Jessica and Ingber, Donald E and Shih, William M},
+	month = jul,
+	year = {2010},
+	note = {{PMID:} 20562873},
+	keywords = {{DNA}, Nucleic Acid Conformation, Physicochemical Phenomena, Stress, Mechanical},
+	pages = {520--524}
 },
 
 @article{li_controlled_2010,
@@ -3142,6 +3428,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	year = {2002},
 	note = {{PMID:} 11832939},
 	pages = {617--620}
+},
+
+@article{douglas_self-assembly_2009,
+	title = {Self-assembly of {DNA} into nanoscale three-dimensional shapes},
+	volume = {459},
+	issn = {1476-4687},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/19458720},
+	doi = {10.1038/nature08016},
+	abstract = {Molecular self-assembly offers a 'bottom-up' route to fabrication with subnanometre precision of complex structures from simple components. {DNA} has proved to be a versatile building block for programmable construction of such objects, including two-dimensional crystals, nanotubes, and three-dimensional wireframe nanopolyhedra. Templated self-assembly of {DNA} into custom two-dimensional shapes on the megadalton scale has been demonstrated previously with a multiple-kilobase 'scaffold strand' that is folded into a flat array of antiparallel helices by interactions with hundreds of oligonucleotide 'staple strands'. Here we extend this method to building custom three-dimensional shapes formed as pleated layers of helices constrained to a honeycomb lattice. We demonstrate the design and assembly of nanostructures approximating six shapes-monolith, square nut, railed bridge, genie bottle, stacked cross, slotted cross-with precisely controlled dimensions ranging from 10 to 100 nm. We also show hierarchical assembly of structures such as homomultimeric linear tracks and heterotrimeric wireframe icosahedra. Proper assembly requires week-long folding times and calibrated monovalent and divalent cation concentrations. We anticipate that our strategy for self-assembling custom three-dimensional shapes will provide a general route to the manufacture of sophisticated devices bearing features on the nanometre scale.},
+	number = {7245},
+	journal = {Nature},
+	author = {Douglas, Shawn M and Dietz, Hendrik and Liedl, Tim and Högberg, Björn and Graf, Franziska and Shih, William M},
+	month = may,
+	year = {2009},
+	note = {{PMID:} 19458720},
+	keywords = {{DNA}, Microscopy, Electron, Transmission, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
+	pages = {414--418}
 },
 
 @article{han_quantum-dot-tagged_2001,
@@ -3305,4 +3608,18 @@ After a wound, differentiation into mucous and ciliated cells was possible and p
 	note = {{PMID:} 10883800},
 	keywords = {Animals, Association Learning, Caenorhabditis elegans, Conditioning, Classical, Cues, Extinction, Psychological, Habituation, Psychophysiologic, Retention {(Psychology)}},
 	pages = {496--505}
+},
+
+@article{trring_dna_2011,
+	title = {{DNA} origami: a quantum leap for self-assembly of complex structures},
+	issn = {1460-4744},
+	shorttitle = {{DNA} origami},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21594298},
+	doi = {10.1039/c1cs15057j},
+	abstract = {The spatially controlled positioning of functional materials by self-assembly is one of the fundamental visions of nanotechnology. Major steps towards this goal have been achieved using {DNA} as a programmable building block. This tutorial review will focus on one of the most promising methods: {DNA} origami. The basic design principles, organization of a variety of functional materials and recent implementation of {DNA} robotics are discussed together with future challenges and opportunities.},
+	journal = {Chemical Society Reviews},
+	author = {Tørring, Thomas and Voigt, Niels V and Nangreave, Jeanette and Yan, Hao and Gothelf, Kurt V},
+	month = may,
+	year = {2011},
+	note = {{PMID:} 21594298}
 }
